--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.andresoviedo.dddmodel2"
     android:versionCode="16"
-    android:versionName="2.0.2" >
+    android:versionName="2.0.2">
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -17,11 +14,11 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:label="AAA"
+        android:theme="@style/AppTheme">
         <activity
             android:name="org.andresoviedo.app.model3D.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,22 +28,19 @@
         <activity
             android:name="org.andresoviedo.app.model3D.view.MenuActivity"
             android:label="@string/title_activity_menu"
-            android:parentActivityName="org.andresoviedo.app.model3D.MainActivity" >
-        </activity>
+            android:parentActivityName="org.andresoviedo.app.model3D.MainActivity"></activity>
         <activity
             android:name="org.andresoviedo.app.model3D.view.DemoActivity"
             android:label="@string/title_activity_menu"
-            android:parentActivityName="org.andresoviedo.app.model3D.MainActivity" >
-        </activity>
+            android:parentActivityName="org.andresoviedo.app.model3D.MainActivity"></activity>
         <activity
             android:name="org.andresoviedo.app.util.view.TextActivity"
             android:label="@string/title_activity_text"
-            android:parentActivityName="org.andresoviedo.app.model3D.MainActivity" >
-        </activity>
+            android:parentActivityName="org.andresoviedo.app.model3D.MainActivity"></activity>
         <activity
             android:name="org.andresoviedo.app.model3D.view.ModelActivity"
             android:label="@string/title_activity_model"
-            android:parentActivityName="org.andresoviedo.app.model3D.MainActivity" >
+            android:parentActivityName="org.andresoviedo.app.model3D.MainActivity">
 
             <!-- android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" -->
         </activity>
